refactor(config): Remove enrichment from dynamic config
