# tdm-be/src/swagger/swagger-config.json
@@ -94,29 +94,6 @@
                                 ]
                             }
                         ]
-                    },
-                    "enrichments": {
-                        "type": "array",
-                        "items": {
-                            "$ref": "#/components/schemas/SwaggerApi"
-                        },
-                        "example": [
-                            {
-                                "url": "https://data-computer.services.istex.fr",
-                                "retrieveUrl": { "url": "/v1/retrieve-csv", "fileExtension": "csv" },
-                                "tags": [
-                                    {
-                                        "name": "data-computer",
-                                        "excluded": [
-                                            "/v1/collect",
-                                            "/v1/retrieve",
-                                            "/v1/mock-error-async",
-                                            "/v1/mock-error-sync"
-                                        ]
-                                    }
-                                ]
-                            }
-                        ]
                     }
                 }
             },
